objects/BMCServiceDesk__SYSProperties__c.object
<CustomObject>
    <description>This object allows you to store system-related data.</description>
    <fields>
        <fullName>BMCServiceDesk__Primary_Role__c</fullName>
        <label>Primary Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__property__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Property</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>System Properties</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SYSProp-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSProperties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>